--- a/A03_SOMA_CODINGTEST/B_06_10/C09_D-22_260213.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C09_D-22_260213.ipynb
@@ -2,50 +2,122 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<problem>31471<is hardest>melborp reve<end>\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(구현): 백준 17413 (단어 뒤집기 2) - https://www.acmicpc.net/problem/17413\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''<problem>17413<is hardest>problem ever<end>''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    s = input().rstrip()\n",
     "\n",
-    "    pass\n",
+    "    final_result = []\n",
+    "    word = []\n",
+    "    in_tag = False\n",
+    "\n",
+    "    for c in s:\n",
+    "\n",
+    "        if c == '<':\n",
+    "            if word:\n",
+    "                final_result.append(\"\".join(reversed(word)))\n",
+    "                word.clear()\n",
+    "\n",
+    "            in_tag = True\n",
+    "            final_result.append(c)\n",
+    "\n",
+    "        elif c == '>':\n",
+    "            final_result.append(c)\n",
+    "            in_tag = False\n",
+    "\n",
+    "        elif in_tag:\n",
+    "            final_result.append(c)\n",
+    "\n",
+    "        else:\n",
+    "            # 태그 안쪽이 아닐 때\n",
+    "            if c == ' ':\n",
+    "                if word:\n",
+    "                    final_result.append(\"\".join(reversed(word)))\n",
+    "                    word.clear()\n",
+    "                final_result.append(' ')\n",
+    "            else:\n",
+    "                word.append(c)\n",
+    "\n",
+    "    if word:\n",
+    "        final_result.append(\"\".join(reversed(word)))\n",
+    "\n",
+    "    print(''.join(final_result))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 5 6\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(수학): 백준 1024 (수열의 합) - https://www.acmicpc.net/problem/1024\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''18 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, L = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    #  sigma (a + n-1) 시작 a(start) 부터 길이 n(lenth) 의 합\n",
+    "    #  (n**2 + (2*a - 1) * n ) // 2\n",
+    "\n",
+    "    ans_start = -1\n",
+    "    ans_len = 0\n",
+    "\n",
+    "    for l in range(L, 101):\n",
+    "        numer = 2*N - l**2 + l\n",
+    "        denom = 2*l\n",
+    "\n",
+    "        if numer % denom == 0:\n",
+    "            start = numer // denom\n",
+    "            if start >= 0:\n",
+    "                ans_start = start\n",
+    "                ans_len = l\n",
+    "                break\n",
+    "\n",
+    "    if ans_start == -1:\n",
+    "        print(ans_start)\n",
+    "    else:\n",
+    "        print(*range(ans_start, ans_start + ans_len))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -53,47 +125,86 @@
    "execution_count": null,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3. 알고(그래프): 백준 1504 (특정한 최단 경로) - https://www.acmicpc.net/problem/1504\n",
+    "# 3. 3. 알고(Set): 백준 1269 (대칭 차집합) - https://www.acmicpc.net/problem/1269\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3 5\n",
+    "1 2 4\n",
+    "2 3 4 5 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    input()\n",
+    "    set1 = set(map(int, input().split()))\n",
+    "    set2 = set(map(int, input().split()))\n",
+    "    print(len(set1.symmetric_difference(set2)))\n",
+    "    # = set1 ^ set2\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4. 알고(백트래킹): 백준 15686 (치킨 배달) - https://www.acmicpc.net/problem/15686\n",
+    "# 4. 알고(그리디): 백준 2847 (게임을 만든 동준이) - https://www.acmicpc.net/problem/2847\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4\n",
+    "5\n",
+    "3\n",
+    "7\n",
+    "5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "    scores = [int(input()) for _ in range(N)]\n",
+    "\n",
+    "    cutting = 0\n",
+    "    base = scores[-1]\n",
+    "\n",
+    "    for i in range(N-2, -1, -1):\n",
+    "        target = scores[i]\n",
+    "        max_level = base - 1\n",
+    "        if target > max_level:\n",
+    "            cutting += target - max_level\n",
+    "        base = min(target, max_level)\n",
+    "\n",
+    "    print(cutting)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,8 +213,19 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "--5. SQL(Lv.4): 특정 기간동안 대여 가능한 자동차들의 대여료 구하기 \n",
-    "-- https://school.programmers.co.kr/learn/courses/30/lessons/157339\n",
+    "-- 5. SQL(Lv.2): 입양 시각 구하기(1) \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59412\n",
+    "SELECT \n",
+    "    HOUR(DATETIME) AS HOUR,\n",
+    "    COUNT(*) AS COUNT\n",
+    "FROM \n",
+    "    ANIMAL_OUTS\n",
+    "WHERE\n",
+    "    HOUR(DATETIME) BETWEEN 9 AND 19\n",
+    "GROUP BY\n",
+    "    HOUR\n",
+    "ORDER BY\n",
+    "    HOUR;\n",
     "```"
    ]
   },
@@ -216,8 +338,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
