--- a/A03_SOMA_CODINGTEST/B_06_10/C09_D-22_260213.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C09_D-22_260213.ipynb
@@ -234,23 +234,95 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. 알고(시뮬): 백준 17143 (낚시왕) - https://www.acmicpc.net/problem/17143\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 6 8\n",
+    "4 1 3 3 8\n",
+    "1 3 5 2 9\n",
+    "2 4 8 4 1\n",
+    "4 5 0 1 4\n",
+    "3 3 1 2 7\n",
+    "1 5 8 4 3\n",
+    "3 6 2 1 2\n",
+    "2 2 2 3 5''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
+    "# 위치, 방향, 속도, 거리, 양의방향, 음의 방향 -> 위치, 방향 리턴.\n",
+    "def get_next_pos(p, d, s, L, pos_dir, neg_dir):\n",
+    "    # d: 1 위, 2 아래, 3, 오른, 4 왼\n",
+    "\n",
+    "    if L == 1:\n",
+    "        return p, d\n",
+    "\n",
+    "    cycle = 2 * (L - 1)\n",
+    "    s %= cycle\n",
+    "    x = p - 1\n",
+    "\n",
+    "    if d == neg_dir:\n",
+    "        x = (cycle - x) % cycle\n",
+    "    x = (x + s) % cycle\n",
+    "\n",
+    "    if x < L:\n",
+    "        new_p = x + 1\n",
+    "    else:\n",
+    "        new_p = (cycle - x) + 1\n",
+    "\n",
+    "    new_d = pos_dir if x < (L-1) else neg_dir\n",
+    "    return new_p, new_d\n",
+    "\n",
     "\n",
     "def solve():\n",
+    "    R, C, M = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    sharks = dict()\n",
+    "    for _ in range(M):\n",
+    "        r, c, s, d, z = map(int, input().split())\n",
+    "        sharks[(r, c)] = (s, d, z)\n",
+    "\n",
+    "    total = 0\n",
+    "    for col in range(1, C+1):\n",
+    "\n",
+    "        for row in range(1, R+1):  # 낚시\n",
+    "            if (row, col) in sharks:\n",
+    "                total += sharks[(row, col)][2]\n",
+    "                del sharks[(row, col)]\n",
+    "                break\n",
+    "\n",
+    "        new_sharks = dict()         # 물고기 이동\n",
+    "        for (r, c), (s, d, z) in sharks.items():\n",
+    "\n",
+    "            if d in (1, 2):  # 세로  아래(2)가 양의 방향\n",
+    "                nr, nd = get_next_pos(r, d, s, R, 2, 1)\n",
+    "                nc = c\n",
+    "\n",
+    "            else:           # 가로 오른(3)가 양의 방향\n",
+    "                nc, nd = get_next_pos(c, d, s, C, 3, 4)\n",
+    "                nr = r\n",
+    "\n",
+    "            # 잡아먹기\n",
+    "            if (nr, nc) not in new_sharks or new_sharks[(nr, nc)][2] < z:\n",
+    "                new_sharks[(nr, nc)] = (s, nd, z) # 덮어 씀\n",
+    "        \n",
+    "        sharks = new_sharks\n",
+    "\n",
+    "    print(total)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -258,23 +330,47 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "[[0, 0, 0, 0, 0, 0, 0], [0, 0, 1, 1, 1, 1, 1], [0, 1, 1, 1, 2, 2, 2], [0, 1, 2, 2, 2, 3, 3], [0, 1, 2, 2, 2, 3, 3], [0, 1, 2, 2, 2, 3, 4], [0, 1, 2, 3, 3, 3, 4]]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. 알고(DP): 백준 9251 (LCS) - https://www.acmicpc.net/problem/9251\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''ACAYKP\n",
+    "CAPCAK''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    A = input().rstrip()\n",
+    "    B = input().rstrip()\n",
+    "\n",
+    "    n, m = len(A), len(B)\n",
+    "    dp = [[0] * (m + 1) for _ in range(n + 1)]\n",
+    "\n",
+    "    # dp[i][j] A의 앞에서부터 i번째 글짜와, B의 앞에서부터 j번째 글짜까지의 최장 공통 부분 수열의 값을 저장.\n",
+    "    for i in range(1, n + 1):\n",
+    "        for j in range(1, m + 1):\n",
+    "            if A[i - 1] == B[j - 1]:\n",
+    "                dp[i][j] = dp[i - 1][j - 1] + 1\n",
+    "            else:\n",
+    "                dp[i][j] = max(dp[i - 1][j], dp[i][j - 1])\n",
+    "\n",
+    "    print(dp[n][m])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -282,23 +378,82 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. 알고(그래프): 백준 1504 (특정한 최단 경로) - https://www.acmicpc.net/problem/1504\n",
     "import sys\n",
+    "from heapq import heappop, heappush\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 6\n",
+    "1 2 3\n",
+    "2 3 3\n",
+    "3 4 1\n",
+    "1 3 5\n",
+    "2 4 5\n",
+    "1 4 4\n",
+    "2 3''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, E = map(int, input().split())\n",
+    "\n",
+    "    graph = [[] for _ in range(N + 1)]\n",
+    "    for _ in range(E):\n",
+    "        a, b, c = map(int, input().split())\n",
+    "        graph[a].append((b, c))\n",
+    "        graph[b].append((a, c))\n",
+    "\n",
+    "    def dijkstra(start):\n",
+    "\n",
+    "        dist = [float('inf')] * (N + 1)\n",
+    "        dist[start] = 0\n",
+    "        pq = [(0, start)]\n",
+    "\n",
+    "        while pq:\n",
+    "            cur_dist, cur = heappop(pq)\n",
+    "            if cur_dist > dist[cur]:\n",
+    "                continue\n",
+    "            for nxt, cost in graph[cur]:\n",
+    "                new_dist = cur_dist + cost\n",
+    "                if new_dist < dist[nxt]:\n",
+    "                    dist[nxt] = new_dist\n",
+    "                    heappush(pq, (new_dist, nxt))\n",
+    "\n",
+    "        return dist\n",
+    "\n",
+    "    v1, v2 = map(int, input().split())\n",
+    "\n",
+    "    start = dijkstra(1)\n",
+    "    # 1 -> v1, 1-> v2\n",
+    "\n",
+    "    # v1 -> v2, v1-> N\n",
+    "    first = dijkstra(v1)\n",
+    "\n",
+    "    # v2 -> v1, V2 -> N\n",
+    "    second = dijkstra(v2)\n",
+    "\n",
+    "    # 1-> v1 -> v2 -> N\n",
+    "    # 1-> v2 -> v1 -> N\n",
+    "    path1 = start[v1] + first[v2] + second[N]\n",
+    "    path2 = start[v2] + second[v1] + first[N]\n",
+    "\n",
+    "    ans = min(path1, path2)\n",
+    "    print(ans if ans < float('inf') else -1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -306,23 +461,68 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. 알고(백트래킹): 백준 15686 (치킨 배달) - https://www.acmicpc.net/problem/15686\n",
     "import sys\n",
+    "from itertools import product, combinations\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5 3\n",
+    "0 0 1 0 0\n",
+    "0 0 2 0 1\n",
+    "0 1 2 0 0\n",
+    "0 0 1 0 0\n",
+    "0 0 0 0 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M = map(int, input().split())\n",
+    "    board = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "    houses = list()\n",
+    "    chickens = list()\n",
+    "\n",
+    "    for r, c in product(range(N), repeat=2):\n",
+    "        val = board[r][c]\n",
+    "        if val == 1:\n",
+    "            houses.append((r, c))\n",
+    "        elif val == 2:\n",
+    "            chickens.append((r, c))\n",
+    "\n",
+    "    min_city_dist = float('inf')\n",
+    "    for picked_chickens in combinations(chickens, M):\n",
+    "\n",
+    "        city_dist_sum = 0\n",
+    "        for hr, hc in houses:               # 한 집을 골라서\n",
+    "            min_val = float('inf')          # 한집의 치킨거리\n",
+    "            for pr, pc in picked_chickens:  # 각 치킨 거리 계산\n",
+    "\n",
+    "                dist = abs(hr-pr) + abs(hc-pc)\n",
+    "                min_val = min(min_val, dist)\n",
+    "\n",
+    "            city_dist_sum += min_val\n",
+    "\n",
+    "            if city_dist_sum > min_city_dist:   # 도시 치킨 거리 값이 최소값보다 커지면 조사 중지\n",
+    "                break\n",
+    "\n",
+    "        min_city_dist = min(min_city_dist, city_dist_sum)\n",
+    "\n",
+    "    print(min_city_dist)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -333,6 +533,47 @@
     "```sql\n",
     "-- 5. SQL(Lv.4): 특정 기간동안 대여 가능한 자동차들의 대여료 구하기 \n",
     "-- https://school.programmers.co.kr/learn/courses/30/lessons/157339\n",
+    "WITH PBL AS (\n",
+    "    SELECT\n",
+    "        C.CAR_ID,\n",
+    "        C.CAR_TYPE,\n",
+    "        C.DAILY_FEE\n",
+    "    FROM CAR_RENTAL_COMPANY_CAR C\n",
+    "    WHERE C.CAR_TYPE IN ('세단', 'SUV')\n",
+    "      AND NOT EXISTS (\n",
+    "          SELECT 1\n",
+    "          FROM CAR_RENTAL_COMPANY_RENTAL_HISTORY H\n",
+    "          WHERE H.CAR_ID = C.CAR_ID\n",
+    "            AND H.START_DATE <= '2022-11-30'\n",
+    "            AND H.END_DATE   >= '2022-11-01'\n",
+    "      )\n",
+    "),\n",
+    "DT AS (\n",
+    "    SELECT\n",
+    "        CAR_TYPE,\n",
+    "        DISCOUNT_RATE\n",
+    "    FROM CAR_RENTAL_COMPANY_DISCOUNT_PLAN\n",
+    "    WHERE DURATION_TYPE = '30일 이상'\n",
+    "),\n",
+    "F AS (\n",
+    "    SELECT\n",
+    "        PBL.CAR_ID,\n",
+    "        PBL.CAR_TYPE,\n",
+    "        ROUND(PBL.DAILY_FEE * 30 * (100 - DT.DISCOUNT_RATE) / 100) AS FEE\n",
+    "    FROM PBL\n",
+    "    JOIN DT USING (CAR_TYPE)\n",
+    ")\n",
+    "SELECT\n",
+    "    CAR_ID,\n",
+    "    CAR_TYPE,\n",
+    "    FEE\n",
+    "FROM F\n",
+    "WHERE FEE >= 500000\n",
+    "  AND FEE < 2000000\n",
+    "ORDER BY\n",
+    "    FEE DESC,\n",
+    "    CAR_TYPE ASC,\n",
+    "    CAR_ID DESC;\n",
     "```"
    ]
   }
