--- a/A03_SOMA_CODINGTEST/B_06_10/C10_D-21_260214.ipynb
+++ b/A03_SOMA_CODINGTEST/B_06_10/C10_D-21_260214.ipynb
@@ -2,26 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "62fc32a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(구현): 백준 1051 (숫자 정사각형) - https://www.acmicpc.net/problem/1051\n",
     "import sys\n",
+    "from itertools import product\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''11 10\n",
+    "9785409507\n",
+    "2055103694\n",
+    "0861396761\n",
+    "3073207669\n",
+    "1233049493\n",
+    "2300248968\n",
+    "9769239548\n",
+    "7984130001\n",
+    "1670020095\n",
+    "8894239889\n",
+    "4053971072''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    N, M = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    board = [list(map(int, input().rstrip())) for _ in range(N)]\n",
+    "\n",
+    "    board_set = set()\n",
+    "    for r, c in product(range(N), range(M)):\n",
+    "        board_set.add((r, c, board[r][c]))\n",
+    "\n",
+    "    def find_sqr(r, c, l):\n",
+    "        off_set = l - 1\n",
+    "        num = board[r][c]\n",
+    "        right_top = (r, c + off_set, num)\n",
+    "        right_bottom = (r + off_set, c + off_set, num)\n",
+    "        left_bottom = (r + off_set, c, num)\n",
+    "\n",
+    "        for dot in [right_top, right_bottom, left_bottom]:\n",
+    "            if not dot in board_set:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    max_length = min(N, M)\n",
+    "    for length in range(max_length, 0, -1):\n",
+    "        for r, c in product(range(N-length+1), range(M-length+1)):\n",
+    "            if find_sqr(r, c, length):\n",
+    "                print(length**2)\n",
+    "                return\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -29,47 +73,117 @@
    "execution_count": null,
    "id": "5f85729d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n",
+      "-1\n",
+      "83\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(수학): 백준 6064 (카잉 달력) - https://www.acmicpc.net/problem/6064\n",
     "import sys\n",
+    "from math import lcm\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "10 12 3 9\n",
+    "10 12 7 2\n",
+    "13 11 5 6''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    M, N, x, y = map(int, input().split())\n",
+    "\n",
+    "    max_year = lcm(M, N)\n",
+    "\n",
+    "    year = x\n",
+    "    while year <= max_year:\n",
+    "\n",
+    "        if (year - y) % N == 0:     # (year - x) % M == 0 도 동시 만족\n",
+    "            print(year)\n",
+    "            return\n",
+    "\n",
+    "        year += M\n",
+    "\n",
+    "    print(-1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "be7d35ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(Map): 백준 2002 (추월) - https://www.acmicpc.net/problem/2002\n",
     "import sys\n",
+    "from itertools import islice\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''5\n",
+    "ZG508OK\n",
+    "PU305A\n",
+    "RI604B\n",
+    "ZG206A\n",
+    "ZG232ZF\n",
+    "PU305A\n",
+    "ZG232ZF\n",
+    "ZG206A\n",
+    "ZG508OK\n",
+    "RI604B''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N = int(input())\n",
+    "\n",
+    "    entry_idx = dict()\n",
+    "    for i in range(N):\n",
+    "        entry_idx[input().rstrip()] = i\n",
+    "\n",
+    "    exit_cars = list()\n",
+    "    for _ in range(N):\n",
+    "        exit_cars.append(input().rstrip())\n",
+    "\n",
+    "    count = 0\n",
+    "    for i, cur_car in enumerate(exit_cars):\n",
+    "        cur_entry_idx = entry_idx[cur_car]\n",
+    "\n",
+    "        for behind_car in islice(exit_cars, i, None):\n",
+    "            behind_entry_idx = entry_idx[behind_car]\n",
+    "\n",
+    "            # 추월을 안했으면 내 뒤 차량의 진입 순서는 모두 내 진입 순서보다 커야한다.\n",
+    "            if cur_entry_idx > behind_entry_idx:  # 작은게 발견되면\n",
+    "                count += 1\n",
+    "                break\n",
+    "\n",
+    "    print(count)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -77,23 +191,49 @@
    "execution_count": null,
    "id": "9ab6f72b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(그리디): 백준 1049 (기타줄) - https://www.acmicpc.net/problem/1049\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''10 3\n",
+    "20 8\n",
+    "40 7\n",
+    "60 4''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
+    "    M, N = map(int, input().split())\n",
     "\n",
-    "    pass\n",
+    "    div, mod = divmod(M, 6)\n",
+    "\n",
+    "    pack_min = float('inf')\n",
+    "    single_min = float('inf')\n",
+    "\n",
+    "    for _ in range(N):\n",
+    "        p, s = map(int, input().split())\n",
+    "        pack_min = min(pack_min, p)\n",
+    "        single_min = min(single_min, s)\n",
+    "\n",
+    "    if single_min * 6 > pack_min:  # 패키지가 더 싼경우\n",
+    "        print(min(pack_min * (div + 1), pack_min * div + single_min*mod))\n",
+    "\n",
+    "    else:\n",
+    "        print(single_min * M)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -102,6 +242,18 @@
    "metadata": {},
    "source": [
     "```sql\n",
+    "-- 5. SQL(Lv.2): 루시와 엘리 찾기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/59046\n",
+    "SELECT \n",
+    "    ANIMAL_ID,\n",
+    "    NAME,\n",
+    "    SEX_UPON_INTAKE\n",
+    "FROM \n",
+    "    ANIMAL_INS\n",
+    "WHERE\n",
+    "    NAME IN ('Lucy', 'Ella', 'Pickle', 'Rogan', 'Sabrina', 'Mitty')\n",
+    "ORDER BY\n",
+    "    ANIMAL_ID ASC;\n",
     "\n",
     "```"
    ]
@@ -111,23 +263,79 @@
    "execution_count": null,
    "id": "d4d305b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 1. 알고(시뮬): 백준 20055 (컨베이어 벨트 위의 로봇) - https://www.acmicpc.net/problem/20055\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''4 5\n",
+    "10 1 10 6 3 4 8 2''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, K = map(int, input().split())\n",
+    "    durable = map(lambda x: [int(x), 0], input().split())\n",
+    "\n",
+    "    dq = deque(durable)\n",
+    "\n",
+    "    broken = 0\n",
+    "    step = 0\n",
+    "\n",
+    "    while broken < K:  # 고장갯수 체크\n",
+    "        step += 1\n",
+    "\n",
+    "        # 1. 벨트 회전\n",
+    "        dq.rotate(1)\n",
+    "        dq[N-1][1] = 0      # 도착로봇 제거.\n",
+    "\n",
+    "        # 2. 로봇이동\n",
+    "\n",
+    "        for i in range(N-2, 0, -1):\n",
+    "            _, cur_robot = dq[i]\n",
+    "            if cur_robot == 0:      # 현재칸 로봇 없으면\n",
+    "                continue\n",
+    "\n",
+    "            right_dura, right_robot = dq[i + 1]\n",
+    "            # 오른쪽에 내구도 있고, 로봇 없으면\n",
+    "            if right_dura > 0 and right_robot == 0:\n",
+    "\n",
+    "                right_dura -= 1  # 내구도 감소\n",
+    "                if right_dura == 0:\n",
+    "                    broken += 1\n",
+    "                dq[i + 1][0] = right_dura\n",
+    "                dq[i + 1][1] = 1    # 로봇 이동\n",
+    "\n",
+    "                dq[i][1] = 0        # 현재 로봇 제거\n",
+    "\n",
+    "        dq[N-1][1] = 0      # 도착로봇 제거.\n",
+    "\n",
+    "        # 3. 새로운 로봇 탑승 시도, (로봇은 항상 비어 있음)\n",
+    "        dura, _ = dq[0]\n",
+    "        if dura > 0:\n",
+    "            dq[0][1] = 1    # 로봇 올리고\n",
+    "\n",
+    "            dura = dura - 1       # 내구도 1 감소\n",
+    "            if dura == 0:         # 고장 수 추가.\n",
+    "                broken += 1\n",
+    "            dq[0][0] = dura\n",
+    "\n",
+    "    print(step)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -135,23 +343,48 @@
    "execution_count": null,
    "id": "44b2c219",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n",
+      "14\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 2. 알고(DP): 백준 15989 (1, 2, 3 더하기 4) - https://www.acmicpc.net/problem/15989\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''3\n",
+    "4\n",
+    "7\n",
+    "10''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    T = int(input())\n",
+    "    nums = [int(input()) for _ in range(T)]\n",
+    "    max_val = max(nums)\n",
+    "\n",
+    "    # dp[i] i 원을 만들 수 있는 방법의 수\n",
+    "    dp = [0] * (max_val + 1)\n",
+    "    dp[0] = 1  # 0 원을 만들 수 있는 경우.\n",
+    "\n",
+    "    for num in (1, 2, 3):\n",
+    "        for i in range(num, max_val + 1):  # 중복 허용함으로 순방향 허용. \n",
+    "            dp[i] = dp[i] + dp[i - num]\n",
+    "\n",
+    "    print(\"\\n\".join(str(dp[num]) for num in nums))\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -159,23 +392,74 @@
    "execution_count": null,
    "id": "7310d5de",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 3. 알고(그래프): 백준 2206 (벽 부수고 이동하기) - https://www.acmicpc.net/problem/2206\n",
     "import sys\n",
+    "from collections import deque\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''6 4\n",
+    "0100\n",
+    "1110\n",
+    "1000\n",
+    "0000\n",
+    "0111\n",
+    "0000''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    N, M = map(int, input().split())\n",
+    "\n",
+    "    board = [input().rstrip() for _ in range(N)]\n",
+    "    directions = [(0, -1), (0, +1), (-1, 0), (+1, 0)]\n",
+    "\n",
+    "    # visited[broken][r][c] False, True\n",
+    "    visited = [[[False] * M for _ in range(N)] for _ in range(2)]\n",
+    "\n",
+    "    # broken = 부순 벽의 개수\n",
+    "    dq = deque([(0, 0, 1, 0)])  # (row, col, dist, broken)\n",
+    "    visited[0][0][0] = True\n",
+    "\n",
+    "    while dq:\n",
+    "        r, c, dist, broken = dq.popleft()\n",
+    "\n",
+    "        if r == N-1 and c == M-1:\n",
+    "            print(dist)\n",
+    "            return\n",
+    "\n",
+    "        dist += 1  # 다음 이동\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "\n",
+    "            if 0 <= nr < N and 0 <= nc < M:\n",
+    "                nxt_val = board[nr][nc]\n",
+    "\n",
+    "                if nxt_val == '0':\n",
+    "                    if not visited[broken][nr][nc]:\n",
+    "                        dq.append((nr, nc, dist, broken))\n",
+    "                        visited[broken][nr][nc] = True\n",
+    "\n",
+    "                elif broken == 0:\n",
+    "                    if not visited[1][nr][nc]:\n",
+    "                        dq.append((nr, nc, dist, 1))\n",
+    "                        visited[1][nr][nc] = True\n",
+    "\n",
+    "    print(-1)\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -183,23 +467,68 @@
    "execution_count": null,
    "id": "f78dd7c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9567843012\n",
+      "1023765489\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
+    "# 4. 알고(백트래킹): 백준 2529 (부등호) - https://www.acmicpc.net/problem/2529\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''9\n",
+    "> < < < > > > < <''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "\n",
     "def solve():\n",
     "\n",
-    "    pass\n",
+    "    k = int(input())\n",
+    "    non_eqs = input().split()\n",
+    "\n",
+    "    answer = []\n",
+    "    answers = []\n",
+    "\n",
+    "    def dfs(depth):\n",
+    "\n",
+    "        if len(answer) == k + 1:\n",
+    "            ans_num = \"\".join(map(str, answer))\n",
+    "            answers.append(ans_num)\n",
+    "            return\n",
+    "\n",
+    "        for num in range(10):\n",
+    "            if num not in answer:\n",
+    "\n",
+    "                if not answer:  # 비어 있을 때\n",
+    "                    answer.append(num)\n",
+    "                    dfs(depth)\n",
+    "                    answer.pop()\n",
+    "                    continue\n",
+    "\n",
+    "                # 숫자 있을 때\n",
+    "                if non_eqs[depth] == '<' and answer[-1] > num:\n",
+    "                    continue\n",
+    "\n",
+    "                if non_eqs[depth] == '>' and answer[-1] < num:\n",
+    "                    continue\n",
+    "\n",
+    "                answer.append(num)\n",
+    "                dfs(depth + 1)\n",
+    "                answer.pop()\n",
+    "\n",
+    "    dfs(0)\n",
+    "    print(answers[-1])\n",
+    "    print(answers[0])\n",
     "\n",
     "\n",
-    "solve()\n"
+    "solve()"
    ]
   },
   {
@@ -208,14 +537,52 @@
    "metadata": {},
    "source": [
     "```sql\n",
+    "-- 5. SQL(Lv.4): 5월 식품들의 총매출 조회하기 \n",
+    "-- https://school.programmers.co.kr/learn/courses/30/lessons/131117\n",
+    "WITH AM AS ( \n",
+    "SELECT\n",
+    "    PRODUCT_ID,\n",
+    "    SUM(AMOUNT) AS SUM_AMOUNT\n",
+    "FROM \n",
+    "    FOOD_ORDER \n",
+    "WHERE\n",
+    "    DATE_FORMAT(PRODUCE_DATE, '%Y-%m') = '2022-05'\n",
+    "GROUP BY\n",
+    "    PRODUCT_ID\n",
+    ")\n",
     "\n",
+    "SELECT\n",
+    "    PRODUCT_ID,\n",
+    "    PRODUCT_NAME,\n",
+    "    (PRICE*SUM_AMOUNT) AS TOTAL_SALES\n",
+    "FROM \n",
+    "    FOOD_PRODUCT\n",
+    "JOIN\n",
+    "    AM USING (PRODUCT_ID)\n",
+    "ORDER BY\n",
+    "    TOTAL_SALES DESC,\n",
+    "    PRODUCT_ID ASC;\n",
     "```"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
